--- a/NomadCoder/#3 JS APP/index.html
+++ b/NomadCoder/#3 JS APP/index.html
@@ -6,14 +6,14 @@
     </head>
 
     <body>
-        <div class="js-clock">
+        <div class="js-clock"> <!--클래스 명을 JS, CSS 모두에서 사용 가능하게 하도록 지정-->
             <h1>00:00</h1>
         </div>
         <form class="js-form form ">
-            <input type="text" placeholder="What is your name?" />
+            <input type="text" placeholder="What is your name?" /> 
         </form>
         <h4 class="js=greetings greetings"></h4>
         <script src="clock.js"></script>
-        <script src="gretting.js"></script>
+        <script src="greeting.js"></script>
     </body>
 </html> 
