--- a/NomadCoder/#3 JS APP/index.html
+++ b/NomadCoder/#3 JS APP/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html>
+
+<html lang="en">
     <head>
-        <title>Something</title>
         <meta charset="utf-8" />
-        <link rel="stylesheet" href="index.css"/>
+        <title>My First Page</title>
+        <link rel="stylesheet" href="css/styles.css"/>
     </head>
 
     <body>
@@ -19,10 +20,11 @@
         </form>
         <ul class="js-toDoList"></ul>
         <spanc class="js-weather"></spanc>
-        <script src="clock.js"></script>
-        <script src="greeting.js"></script>
-        <script src="todo.js"></script>
-        <script src="bg.js"></script>
-        <script src="weather.js"></script>
+
+        <script src="js/clock.js"></script>
+        <script src="js/greeting.js"></script>
+        <script src="js/todo.js"></script>
+        <script src="js/bg.js"></script>
+        <script src="js/weather.js"></script>
     </body>
-</html> 
+</html>
