--- a/Elysium/registration.html
+++ b/Elysium/registration.html
@@ -5,23 +5,24 @@
 <head>
     <meta charset="utf-8" />
     <title>Kyung-hee Oriental Clinic</title>
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/registration.css" />
 </head>
 
 <body>
     <image src="image/logo.png" />
     <form>
         <main>
-            <div><input required placeholder="이름" type="text" /></div>
-            <div><input required placeholder="전화번호" type="tel" required pattern="[0-9]{3}-[0-9]{4}-[0-9]{4}" /></div>
+            <div><input class="info patientName" required placeholder="이름" type="text" /></div>
+            <div><input class="info patientPhone" required placeholder="전화번호" type="tel" /></div>
             <div>
-                <input required placeholder="한의원 주소를 검색하세요." type="text" />
-                <input type="button" value="주소 검색" />
+                <input id="clinicAddress" required placeholder="한의원 주소를 검색하세요." type="text" />
+                <button class="btn searchAddress">주소 검색</button>
             </div>
-            <div><input required placeholder="주민등록번호" type="text" required pattern="[0-9]{6}-[0-9]{7}" /></div>
-            <div><input placeholder="소개환자(선택)" type="text" /></div>
+            <div><input class="info identificationNumber" required placeholder="주민등록번호" type="text" required
+                    pattern="[0-9]{13}" /></div>
+            <div><input class="info introductor" placeholder="소개환자(선택)" type="text" /></div>
         </main>
-        <div><input type="submit" value="증상 입력하기" /></div>
+        <div><button class="btn submitInfo">증상 입력하기</button></div>
     </form>
 </body>
 
