--- a/Elysium/registration.html
+++ b/Elysium/registration.html
@@ -5,6 +5,7 @@
 <head>
     <meta charset="utf-8" />
     <title>Kyung-hee Oriental Clinic</title>
+    <link rel="stylesheet" href="css/basic.css" />
     <link rel="stylesheet" href="css/registration.css" />
 </head>
 
@@ -22,7 +23,9 @@
                     pattern="[0-9]{13}" /></div>
             <div><input class="info introductor" placeholder="소개환자(선택)" type="text" /></div>
         </main>
-        <div><button class="btn submitInfo">증상 입력하기</button></div>
+        <button class="btn submitInfo" type="button"
+            onclick="location.href='C:/Users/eee56/OneDrive/%EC%82%AC%EC%A7%84/%EB%AC%B8%EC%84%9C/GitHub/TIL_Elysium/elysium/sympton1.html'">증상
+            입력하기</button>
     </form>
 </body>
 
