--- a/Elysium/sympton2.html
+++ b/Elysium/sympton2.html
@@ -10,8 +10,101 @@
 </head>
 
 <body>
-    <img src="image/image 1.png" />
-    <img src="image/image 2.png" />
+    <img id="body" src="image/image 1.png" />
+    <img id="head" src="image/image 2.png" />
+    <form>
+        <section id="body-img">
+            <div>
+                <button class="small-btn element1">목</button>
+                <hr class="diagonal" id="line1" width=178.99px noshade>
+                <div class="circle circle-wrapper-body" id="spot-body1">
+                    <div class="circle small-circle-body"></div>
+                </div>
+            </div>
+            <div>
+                <button class="small-btn element2">어깨</button>
+                <div class="circle circle-wrapper-body" id="spot-body2">
+                    <div class="circle small-circle-body"></div>
+                </div>
+            </div>
+            <div>
+                <button class="small-btn element3">팔꿈치</button>
+                <div class="circle circle-wrapper-body" id="spot-body3">
+                    <div class="circle small-circle-body"></div>
+                </div>
+            </div>
+            <div>
+                <button class="small-btn element4">허리</button>
+                <div class="circle circle-wrapper-body" id="spot-body4">
+                    <div class="circle small-circle-body"></div>
+                </div>
+            </div>
+            <div>
+                <button class="small-btn element5">손,손목</button>
+                <div class="circle circle-wrapper-body" id="spot-body5">
+                    <div class="circle small-circle-body"></div>
+                </div>
+            </div>
+            <div>
+                <button class="small-btn element6">가슴</button>
+                <div class="circle circle-wrapper-body" id="spot-body6">
+                    <div class="circle small-circle-body"></div>
+                </div>
+            </div>
+            <div>
+                <button class="small-btn element7">배</button>
+                <div class="circle circle-wrapper-body" id="spot-body7">
+                    <div class="circle small-circle-body"></div>
+                </div>
+            </div>
+            <div>
+                <button class="small-btn element8">골반</button>
+                <div class="circle circle-wrapper-body" id="spot-body8">
+                    <div class="circle small-circle-body"></div>
+                </div>
+            </div>
+            <div>
+                <button class="small-btn element9">무릎</button>
+                <div class="circle circle-wrapper-body" id="spot-body9">
+                    <div class="circle small-circle-body"></div>
+                </div>
+            </div>
+            <div>
+                <button class="small-btn element10">발,발목</button>
+                <div class="circle circle-wrapper-body" id="spot-body10">
+                    <div class="circle small-circle-body"></div>
+                </div>
+            </div>
+        </section>
+        <section id="head-img">
+            <div>
+                <button class="small-btn element11">눈</button>
+                <div class="circle circle-wrapper-head" id="spot-head11">
+                    <div class="circle small-circle-head"></div>
+                </div>
+            </div>
+            <div>
+                <button class="small-btn element12">귀</button>
+                <div class="circle circle-wrapper-head" id="spot-head12">
+                    <div class="circle small-circle-head"></div>
+                </div>
+            </div>
+            <div>
+                <button class="small-btn element13">코</button>
+                <div class="circle circle-wrapper-head" id="spot-head13">
+                    <div class="circle small-circle-head"></div>
+                </div>
+            </div>
+            <div>
+                <button class="small-btn element14">입</button>
+                <div class="circle circle-wrapper-head" id="spot-head14">
+                    <div class="circle small-circle-head"></div>
+                </div>
+            </div>
+        </section>
+        <button class="btn else">기타</button>
+        <button class="btn submitInfo" type="button">접수하기</button>
+    </form>
 </body>
 
 </html>
