--- a/Elysium/sympton2.html
+++ b/Elysium/sympton2.html
@@ -1,110 +1,110 @@
 <!DOCTYPE html>
 
 <html lang="kr">
-
-<head>
+  <head>
     <meta charset="utf-8" />
     <title>Kyung-hee Oriental Clinic</title>
     <link rel="stylesheet" href="css/basic.css" />
     <link rel="stylesheet" href="css/sympton2.css" />
-</head>
+  </head>
 
-<body>
+  <body>
     <img id="body" src="image/image 1.png" />
     <img id="head" src="image/image 2.png" />
     <form>
-        <section id="body-img">
-            <div>
-                <button class="small-btn element1">목</button>
-                <hr class="diagonal" id="line1" width=178.99px noshade>
-                <div class="circle circle-wrapper-body" id="spot-body1">
-                    <div class="circle small-circle-body"></div>
-                </div>
-            </div>
-            <div>
-                <button class="small-btn element2">어깨</button>
-                <div class="circle circle-wrapper-body" id="spot-body2">
-                    <div class="circle small-circle-body"></div>
-                </div>
-            </div>
-            <div>
-                <button class="small-btn element3">팔꿈치</button>
-                <div class="circle circle-wrapper-body" id="spot-body3">
-                    <div class="circle small-circle-body"></div>
-                </div>
-            </div>
-            <div>
-                <button class="small-btn element4">허리</button>
-                <div class="circle circle-wrapper-body" id="spot-body4">
-                    <div class="circle small-circle-body"></div>
-                </div>
-            </div>
-            <div>
-                <button class="small-btn element5">손,손목</button>
-                <div class="circle circle-wrapper-body" id="spot-body5">
-                    <div class="circle small-circle-body"></div>
-                </div>
-            </div>
-            <div>
-                <button class="small-btn element6">가슴</button>
-                <div class="circle circle-wrapper-body" id="spot-body6">
-                    <div class="circle small-circle-body"></div>
-                </div>
-            </div>
-            <div>
-                <button class="small-btn element7">배</button>
-                <div class="circle circle-wrapper-body" id="spot-body7">
-                    <div class="circle small-circle-body"></div>
-                </div>
-            </div>
-            <div>
-                <button class="small-btn element8">골반</button>
-                <div class="circle circle-wrapper-body" id="spot-body8">
-                    <div class="circle small-circle-body"></div>
-                </div>
-            </div>
-            <div>
-                <button class="small-btn element9">무릎</button>
-                <div class="circle circle-wrapper-body" id="spot-body9">
-                    <div class="circle small-circle-body"></div>
-                </div>
-            </div>
-            <div>
-                <button class="small-btn element10">발,발목</button>
-                <div class="circle circle-wrapper-body" id="spot-body10">
-                    <div class="circle small-circle-body"></div>
-                </div>
-            </div>
-        </section>
-        <section id="head-img">
-            <div>
-                <button class="small-btn element11">눈</button>
-                <div class="circle circle-wrapper-head" id="spot-head11">
-                    <div class="circle small-circle-head"></div>
-                </div>
-            </div>
-            <div>
-                <button class="small-btn element12">귀</button>
-                <div class="circle circle-wrapper-head" id="spot-head12">
-                    <div class="circle small-circle-head"></div>
-                </div>
-            </div>
-            <div>
-                <button class="small-btn element13">코</button>
-                <div class="circle circle-wrapper-head" id="spot-head13">
-                    <div class="circle small-circle-head"></div>
-                </div>
-            </div>
-            <div>
-                <button class="small-btn element14">입</button>
-                <div class="circle circle-wrapper-head" id="spot-head14">
-                    <div class="circle small-circle-head"></div>
-                </div>
-            </div>
-        </section>
-        <button class="btn else">기타</button>
-        <button class="btn submitInfo" type="button">접수하기</button>
+      <section id="body-img">
+        <div>
+          <button class="small-btn element1">목</button>
+          <hr class="diagonal" id="line1" width="178.99px" noshade />
+          <div class="circle circle-wrapper-body" id="spot-body1">
+            <div class="circle small-circle-body"></div>
+          </div>
+        </div>
+        <div>
+          <button class="small-btn element2">어깨</button>
+          <hr class="diagonal" id="line2" width="122.1px" noshade />
+          <div class="circle circle-wrapper-body" id="spot-body2">
+            <div class="circle small-circle-body"></div>
+          </div>
+        </div>
+        <div>
+          <button class="small-btn element3">팔꿈치</button>
+          <hr class="diagonal" id="line3" width="99.96px" noshade />
+          <div class="circle circle-wrapper-body" id="spot-body3">
+            <div class="circle small-circle-body"></div>
+          </div>
+        </div>
+        <div>
+          <button class="small-btn element4">허리</button>
+          <div class="circle circle-wrapper-body" id="spot-body4">
+            <div class="circle small-circle-body"></div>
+          </div>
+        </div>
+        <div>
+          <button class="small-btn element5">손,손목</button>
+          <div class="circle circle-wrapper-body" id="spot-body5">
+            <div class="circle small-circle-body"></div>
+          </div>
+        </div>
+        <div>
+          <button class="small-btn element6">가슴</button>
+          <div class="circle circle-wrapper-body" id="spot-body6">
+            <div class="circle small-circle-body"></div>
+          </div>
+        </div>
+        <div>
+          <button class="small-btn element7">배</button>
+          <div class="circle circle-wrapper-body" id="spot-body7">
+            <div class="circle small-circle-body"></div>
+          </div>
+        </div>
+        <div>
+          <button class="small-btn element8">골반</button>
+          <div class="circle circle-wrapper-body" id="spot-body8">
+            <div class="circle small-circle-body"></div>
+          </div>
+        </div>
+        <div>
+          <button class="small-btn element9">무릎</button>
+          <div class="circle circle-wrapper-body" id="spot-body9">
+            <div class="circle small-circle-body"></div>
+          </div>
+        </div>
+        <div>
+          <button class="small-btn element10">발,발목</button>
+          <div class="circle circle-wrapper-body" id="spot-body10">
+            <div class="circle small-circle-body"></div>
+          </div>
+        </div>
+      </section>
+      <section id="head-img">
+        <div>
+          <button class="small-btn element11">눈</button>
+          <div class="circle circle-wrapper-head" id="spot-head11">
+            <div class="circle small-circle-head"></div>
+          </div>
+        </div>
+        <div>
+          <button class="small-btn element12">귀</button>
+          <div class="circle circle-wrapper-head" id="spot-head12">
+            <div class="circle small-circle-head"></div>
+          </div>
+        </div>
+        <div>
+          <button class="small-btn element13">코</button>
+          <div class="circle circle-wrapper-head" id="spot-head13">
+            <div class="circle small-circle-head"></div>
+          </div>
+        </div>
+        <div>
+          <button class="small-btn element14">입</button>
+          <div class="circle circle-wrapper-head" id="spot-head14">
+            <div class="circle small-circle-head"></div>
+          </div>
+        </div>
+      </section>
+      <button class="btn else">기타</button>
+      <button class="btn submitInfo" type="button">접수하기</button>
     </form>
-</body>
-
+  </body>
 </html>
