--- a/elysium _responsive/sympton1.html
+++ b/elysium _responsive/sympton1.html
@@ -18,7 +18,7 @@
     <span style="color:#9D1C20">해당되는 사항</span>만 클릭해주세요.
     <form>
         <main>
-            <button class="btn element1">고혈압</button id="click">
+            <button class="btn element1">고혈압</button>
             <button class="btn element2">당뇨</button>
             <button class="btn element3">간염</button>
             <button class="btn element4">알레르기</button>
@@ -29,7 +29,7 @@
         </main>
     </form>
     <footer>
-        <button class="btn submitInfo" type="button"
+        <button id="submitInfo" type="button"
             onclick="location.href='C:/Users/eee56/OneDrive/%EC%82%AC%EC%A7%84/%EB%AC%B8%EC%84%9C/GitHub/TIL_Elysium/elysium/sympton2.html'">제출하기</button>
     </footer>
     <!-- <script src="js/sympton1.js"></script> -->
