--- a/Elysium/index.html
+++ b/Elysium/index.html
@@ -11,19 +11,19 @@
 </head>
 
 <body>
-  <img src="image/logo.png" alt="Kyunghee Oriental" />
-  <form method='post' action = "./php/join.php">
+  <img src="image/logo.png" alt="Kyunghee Oriental Clinic" />
+  <form method='post' action = "http://hyoriinvic.dothome.co.kr/lib/login.php">
     <main>
       <div><input class="info patientName" required placeholder="이름" autocomplete='off' type="text" /></div>
       <div><input class="info patientPhone" required placeholder="전화번호" autocomplete='off' type="tel" /></div>
     </main>
     <div>
-      <button id="submitInfo" type="button" onclick="location.href='./sympton1.html'">증상 입력하기</button>
+      <button id="submitInfo" type="button" onclick="location.href='http://hyoriinvic.oriental-ex.com/sympton1.php'">증상 입력하기</button>
     </div>
   </form>
   <div>
     <span>처음 방문하셨습니까?</span>
-    <a href="./registration.html" target="_self">환자등록</a>
+    <a href="http://hyoriinvic.oriental-ex.com/registration.php" target="_self">환자등록</a>
   </div>
 </body>
 
