--- a/Elysium/sympton1.html
+++ b/Elysium/sympton1.html
@@ -7,32 +7,44 @@
     <title>Kyung-hee Oriental Clinic</title>
     <link rel="stylesheet" href="css/basic.css" />
     <link rel="stylesheet" href="css/sympton1.css" />
+    <!-- <script src="./lib/jquery-3.5.1.min.js"></script> -->
 </head>
-
-<!--버튼 클릭 시 일시적으로 색상이 변하긴 하나, 유지되지 않음
-    뭔가 다른 방법이 있을텐데.. js 쓰는 거 하나도 모르겠
--->
 
 <body>
     <img src="image/logo.png" />
     <span style="color:#9D1C20">해당되는 사항</span>만 클릭해주세요.
     <form>
         <main>
-            <button class="btn element1">고혈압</button>
-            <button class="btn element2">당뇨</button>
-            <button class="btn element3">간염</button>
-            <button class="btn element4">알레르기</button>
-            <button class="btn element5">수술 이력</button>
-            <button class="btn element6">복용약</button>
+            <button class="btn" id="element1">고혈압</button>
+            <button class="btn" id="element2">당뇨</button>
+            <button class="btn" id="element3">간염</button>
+            <button class="btn" id="element4">알레르기</button>
+            <button class="btn" id="element5">수술 이력</button>
+            <button class="btn" id="element6">복용약</button>
             <button class="small-btn drinking">음주</button>
             <button class="small-btn smoking">흡연</button>
         </main>
     </form>
+    <ul class="js-symptonList">
+        </ul>
     <footer>
-        <button id="submitInfo" type="button"
-            onclick="location.href='C:/Users/eee56/OneDrive/%EC%82%AC%EC%A7%84/%EB%AC%B8%EC%84%9C/GitHub/TIL_Elysium/elysium/sympton2.html'">제출하기</button>
+        <button id="submitInfo" type="button" onclick="location.href='./sympton2.html'">제출하기</button>
     </footer>
-    <!-- <script src="js/sympton1.js"></script> -->
-</body>
-
+    <!-- <script>
+        $(document).ready(function(){
+        $.map([".btn", ".small-btn"], function(btn, i){
+            $(btn).click(function(){
+                event.preventDefault();
+                const CLICKED_CLASS = "clicked"; 
+                const hasClass = btn.classList.contains(CLICKED_CLASS);
+                if (hasClass) {
+                    btn.classList.remove(CLICKED_CLASS);
+                } else {
+                    btn.classList.add(CLICKED_CLASS);
+                }
+            })
+        });
+    });
+    </script> -->
+    <script src="./js/sympton1.js"></script>
 </html>
