--- a/Elysium/registration.html
+++ b/Elysium/registration.html
@@ -24,8 +24,7 @@
             <div><input class="info recommender" placeholder="소개환자(선택)" type="text" /></div>
         </main>
         <button class="btn submitInfo" type="button"
-            onclick="location.href='./sympton1.html'">증상
-            입력하기</button>
+            onclick="location.href='./sympton1.html'">증상 입력하기</button>
     </form>
 </body>
 
